popups es tweaking

--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -25,13 +25,13 @@
         <mat-form-field>
           <mat-label>Mennyiség (kg)</mat-label>
           <mat-select [ngStyle]="{'font-family':'Signika Negative Light', 'font-weight':'bold'}" [(ngModel)]="selectedQuantities[i]">
-          <mat-option *ngFor="let quantity of quantities" [value]="quantity">
+          <mat-option [ngStyle]="{'font-family':'Signika Negative Light', 'font-weight':'bold'}" *ngFor="let quantity of quantities" [value]="quantity">
               {{ quantity }} kg - {{ quantity * category.price }} Ft
             </mat-option>
           </mat-select>
         </mat-form-field>
-        <button (click)="addToBasket(selectedQuantities[i], category)" mat-raised-button color="accent">Kosárba teszem</button>
-
+        <button (click)="addToBasket(selectedQuantities[i], category);" mat-raised-button color="accent">Kosárba teszem</button>
+<!--        <app-snack-bar-basket></app-snack-bar-basket>-->
       </mat-card-content>
     </mat-card>
 
