--- a/src/app/pages/products/products.component.scss
+++ b/src/app/pages/products/products.component.scss
@@ -1,9 +1,18 @@
 /* products.component.scss */
 * {
+
+}
+
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+
+mat-select {
+  font-family: "Bodoni MT Poster Compressed", cursive;
+  font-weight: bold;
 }
 
 .category-container {
-  height: 100vh;
+  height: 100%;
   width: 50%;
   align-self: center;
   justify-content: center;
@@ -11,6 +20,7 @@
   vertical-align: center;
   padding: 10px;
 }
+
 
 .category-card {
   max-width: 500px;
@@ -44,6 +54,7 @@
 
 }
 
+
 .category-title {
   text-align: center;
   font-size: 1.5em;
@@ -61,7 +72,8 @@
 .category-button {
   font-size: 1.5em;
   align-self: center;
-  margin-top: auto;}
+  margin-top: auto;
+}
 
 mat-card-content img {
   width: 400px;
