--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,15 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
 
 $bgcolor: azure;
-
-html {
-    background-color: $bgcolor;
-    height: 100%;
+*::-webkit-scrollbar {
+  display: none;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html {
+  background-color: $bgcolor;
+}
 
-.loading-indicator{
+html, body {
+  height: 100%;
+  overflow: hidden; /* Hide overflow */
+}
+
+body {
+  margin: 0;
+  font-family: "Signika Negative Light", sans-serif;
+  overflow-y: scroll; /* Enable vertical scrolling */
+}
+
+.loading-indicator {
   z-index: 999;
   position: fixed;
   height: 1em;
@@ -20,7 +30,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   bottom: 0;
   right: 0;
 }
-.loading-indicator::before{
+
+.loading-indicator::before {
   content: '';
   display: block;
   position: fixed;
@@ -30,6 +41,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   bottom: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
