--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="main_component">
   <div class="card">
     <div class="card-body">
-      <h1>Felhasználó profil</h1>
+      <h1>Felhasználói profil</h1>
       <div *ngIf="loggedInUser">
         <h3>Üdv, {{ loggedInUser.name.firstname }}!</h3>
       </div>
