--- a/src/app/shared/pop-ups/pop-up-no-user/pop-up-no-user.component.html
+++ b/src/app/shared/pop-ups/pop-up-no-user/pop-up-no-user.component.html
@@ -1,23 +1,39 @@
-<div *ngIf="!isThisBuyingPopUp">
-  <h2 [ngStyle]="{'font-weight':'bold', 'font-family': 'Bodoni MT Poster Compressed, cursive'}" mat-dialog-title>Nem vagy
-  bejelentkezve!</h2>
-<mat-dialog-content [ngStyle]="{'font-weight':'bold', 'font-family': 'Bodoni MT Poster Compressed, cursive'}">
-  <a mat-dialog-close routerLink="/signup">Regisztrálj</a> vagy
-  <a mat-dialog-close routerLink="/login">jelentkezz</a> be a {{data.pageName}} oldal használatához!
-</mat-dialog-content>
-<mat-dialog-actions>
-  <button mat-raised-button color="primary" mat-dialog-close>Bezárás</button>
-</mat-dialog-actions>
+<div *ngIf="!isThisBuyingPopUp && !holder">
+    <h2 [ngStyle]="{'font-weight':'bold', 'font-family': 'Bodoni MT Poster Compressed, cursive'}" mat-dialog-title>Nem
+        vagy
+        bejelentkezve!</h2>
+    <mat-dialog-content [ngStyle]="{'font-weight':'bold', 'font-family': 'Bodoni MT Poster Compressed, cursive'}">
+        <a mat-dialog-close routerLink="/signup">Regisztrálj</a> vagy
+        <a mat-dialog-close routerLink="/login">jelentkezz</a> be a {{data.pageName}} oldal használatához!
+    </mat-dialog-content>
+    <mat-dialog-actions>
+        <button mat-raised-button color="primary" mat-dialog-close>Bezárás</button>
+    </mat-dialog-actions>
 </div>
 
-<div *ngIf="isThisBuyingPopUp">
-<h2 [ngStyle]="{'font-weight':'bold', 'font-family': 'Bodoni MT Poster Compressed, cursive'}" mat-dialog-title>Nem vagy
-  bejelentkezve!</h2>
-<mat-dialog-content [ngStyle]="{'font-weight':'bold', 'font-family': 'Bodoni MT Poster Compressed, cursive'}">
-  <a mat-dialog-close routerLink="/signup">Regisztrálj</a> vagy
-  <a mat-dialog-close routerLink="/login">jelentkezz</a> be, ha szeretnél vásárolni!
-</mat-dialog-content>
-<mat-dialog-actions>
-  <button mat-raised-button color="primary" mat-dialog-close>Bezárás</button>
-</mat-dialog-actions>
+<div *ngIf="isThisBuyingPopUp && !isThisFirstRegistration && !holder">
+    <h2 [ngStyle]="{'font-weight':'bold', 'font-family': 'Bodoni MT Poster Compressed, cursive'}" mat-dialog-title>Nem
+        vagy
+        bejelentkezve!</h2>
+    <mat-dialog-content [ngStyle]="{'font-weight':'bold', 'font-family': 'Bodoni MT Poster Compressed, cursive'}">
+        <a mat-dialog-close routerLink="/signup">Regisztrálj</a> vagy
+        <a mat-dialog-close routerLink="/login">jelentkezz</a> be, ha szeretnél vásárolni!
+    </mat-dialog-content>
+    <mat-dialog-actions>
+        <button mat-raised-button color="primary" mat-dialog-close>Bezárás</button>
+    </mat-dialog-actions>
+</div>
+
+<div *ngIf="isThisFirstRegistration && holder">
+    <h2 [ngStyle]="{'font-weight':'bold', 'font-family': 'Bodoni MT Poster Compressed, cursive'}" mat-dialog-title>
+        Sikeres regisztráció! Jóváírtunk <a mat-dialog-close routerLink="/profile">számodra</a> 30 FrissPontot!</h2>
+    <mat-dialog-content [ngStyle]="{'font-weight':'bold', 'font-family': 'Bodoni MT Poster Compressed, cursive'}">
+        Tekintsd meg legfrissebb
+        <a mat-dialog-close routerLink="/products">Termékeinket</a> vagy
+        <a mat-dialog-close routerLink="/login">Kuponjainkat</a>.
+        További jó böngészést!
+    </mat-dialog-content>
+    <mat-dialog-actions>
+        <button mat-raised-button color="primary" mat-dialog-close>Bezárás</button>
+    </mat-dialog-actions>
 </div>
