--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,5 +1,5 @@
-<div class="main_component">
-    <h1>Üdvözöllek online zöldség-gyümölcs üzletünkben{{ loggedInUser ? ", " + loggedInUser.name.firstname : '' }}!</h1>
+<div class="main_component" *ngIf="(!loggedInUser)">
+<h1>Üdvözöllek online zöldség-gyümölcs üzletünkben{{ loggedInUser ? ", " + loggedInUser.name.firstname : '' }}!</h1>
     <h3>Rendelj még ma pár kattintással, és akár 24 órán belül a küszöbödön lesz a legfrissebb és legszebb csomag, amit
         valaha láttál!</h3>
     <h3>Regisztrálj rendszerünkben, így nem szükséges minden rendelésnél újra megadnod az adatokat, és részt vehetsz a
@@ -19,4 +19,28 @@
         channel closed before a response was received
     </h2>
 </div>
+
+<div class="main_component" *ngIf="(loggedInUser)">
+
+    <h1>Üdvözöllek online zöldség-gyümölcs üzletünkben{{ loggedInUser ? ", " + loggedInUser.name.firstname : '' }}!</h1>
+    <h3>Rendelj még ma pár kattintással, és akár 24 órán belül a küszöbödön lesz a legfrissebb és legszebb csomag, amit
+        valaha láttál!</h3>
+    <h3>Regisztrálj rendszerünkben, így nem szükséges minden rendelésnél újra megadnod az adatokat, és részt vehetsz a
+        FrissPontok gyűjtésében is!</h3>
+<!--    <h3> Kezdetnek 30-at ajándékba adunk az oldalunkra való regisztrációért!</h3>-->
+    <h3 [ngStyle]="{  'font-weight': 'bold',
+  'font-style': 'italic'}">Friss kosár - Prémium áru szívvel-lélekkel
+        <mat-icon>favorite</mat-icon>
+    </h3>
+    <h2><a routerLink="/products">Tekintsd meg legfrissebb termékeinket!</a></h2>
+</div>
+
+<div [ngStyle]="{'visibility':'hidden'}">
+    <h2>
+        <strong>Ha esetleg ezt az errort látnád a konzolban, akkor kapcsolj ki minden böngészős bővítmény.</strong><br>
+        Unchecked runtime.lastError: A listener indicated an asynchronous response by returning true, but the message
+        channel closed before a response was received
+    </h2>
+</div>
+
 
