--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,41 +1,51 @@
 <div class="outer-container">
-  <div fxLayoutAlign="center center" fxLayout="row wrap" class="category-container" *ngIf="!isFilterActive">
-    <mat-card fxFlex="calc(50% - 25px)" class="category-card" *ngFor="let category of categories; let i = index">
-      <mat-card-header class="category-title">
-        <mat-card-title class="category-title">{{ category }}</mat-card-title>
-      </mat-card-header>
-      <mat-card-content class="image-container">
-        <img [src]="categoryImages[i]" alt="Category Image" class="category-image">
-      </mat-card-content>
-      <mat-card-actions class="category-button">
-        <button mat-raised-button color="primary" (click)="onSelectCategory(categoriesName[i])">Tovább</button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
+    <div fxLayoutAlign="center center" fxLayout="row wrap" class="category-container" *ngIf="!isFilterActive">
+        <mat-card fxFlex="calc(50% - 25px)" class="category-card" *ngFor="let category of categories; let i = index">
+            <mat-card-header class="category-title">
+                <mat-card-title class="category-title">{{ category }}</mat-card-title>
+            </mat-card-header>
+            <mat-card-content class="image-container">
+                <img [src]="categoryImages[i]" alt="Category Image" class="category-image">
+            </mat-card-content>
+            <mat-card-actions class="category-button">
+                <button mat-raised-button color="primary" (click)="onSelectCategory(categoriesName[i])">Tovább</button>
+            </mat-card-actions>
+        </mat-card>
+    </div>
 
-  <div *ngIf="isFilterActive" class="back-to-categ-button"><button color="primary" mat-raised-button (click)="goBackToCategoires();">Vissza a kategóriákhoz</button></div>
-  <div fxLayoutAlign="space-around"  fxLayout="row wrap" class="category-container" *ngIf="isFilterActive">
-    <mat-card fxFlex="calc(50% - 25px)" class="category-card" *ngFor="let category of filteredProducts; let i = index">
-      <mat-card-header class="category-title">
-        <mat-card-title class="category-title">{{ category.name }}</mat-card-title>
-      </mat-card-header>
-      <mat-card-content class="image-container">
-        <img [src]="categoryImagesFiltered[i]" alt="Category Image" class="category-image">
-        <p class="price">Ár: {{category.price}} Ft /kg </p>
-        <mat-form-field>
-          <mat-label>Mennyiség (kg)</mat-label>
-          <mat-select [ngStyle]="{'font-family':'Signika Negative Light', 'font-weight':'bold'}" [(ngModel)]="selectedQuantities[i]">
-          <mat-option [ngStyle]="{'font-family':'Signika Negative Light', 'font-weight':'bold'}" *ngFor="let quantity of quantities" [value]="quantity">
-              {{ quantity }} kg - {{ quantity * category.price }} Ft
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-        <button (click)="addToBasket(selectedQuantities[i], category);" mat-raised-button color="accent">Kosárba teszem</button>
-<!--        <app-snack-bar-basket></app-snack-bar-basket>-->
-      </mat-card-content>
-    </mat-card>
+    <div *ngIf="isFilterActive" class="back-to-categ-button">
+        <button [ngStyle]="{'margin-bottom':'10vh'}" color="primary" mat-raised-button (click)="goBackToCategoires();">Vissza a kategóriákhoz</button>
+    </div>
+    <div *ngIf="isFilterActive" class="back-to-categ-button">
+        <button color="primary" mat-raised-button (click)="goToBasket();">Tovább a kosárhoz</button>
+    </div>
+    <div fxLayoutAlign="space-around" fxLayout="row wrap" class="category-container" *ngIf="isFilterActive">
+        <mat-card fxFlex="calc(50% - 25px)" class="category-card"
+                  *ngFor="let category of filteredProducts; let i = index">
+            <mat-card-header class="category-title">
+                <mat-card-title class="category-title">{{ category.name }}</mat-card-title>
+            </mat-card-header>
+            <mat-card-content class="image-container">
+                <img [src]="categoryImagesFiltered[i]" alt="Category Image" class="category-image">
+                <p class="price">Ár: {{category.price}} Ft /kg </p>
+                <mat-form-field>
+                    <mat-label>Mennyiség (kg)</mat-label>
+                    <mat-select [ngStyle]="{'font-family':'Signika Negative Light', 'font-weight':'bold'}"
+                                [(ngModel)]="selectedQuantities[i]">
+                        <mat-option [ngStyle]="{'font-family':'Signika Negative Light', 'font-weight':'bold'}"
+                                    *ngFor="let quantity of quantities" [value]="quantity">
+                            {{ quantity }} kg - {{ quantity * category.price }} Ft
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <button (click)="addToBasket(selectedQuantities[i], category);" mat-raised-button color="accent">Kosárba
+                    teszem
+                </button>
+                <!--        <app-snack-bar-basket></app-snack-bar-basket>-->
+            </mat-card-content>
+        </mat-card>
 
-  </div>
+    </div>
 </div>
 
 
