holder pop up buying

--- a/src/app/shared/pop-ups/pop-up-no-user/pop-up-no-user.component.html
+++ b/src/app/shared/pop-ups/pop-up-no-user/pop-up-no-user.component.html
@@ -11,7 +11,7 @@
     </mat-dialog-actions>
 </div>
 
-<div *ngIf="isThisBuyingPopUp && !isThisFirstRegistration && !holder">
+<div *ngIf="isThisBuyingPopUp && !holder">
     <h2 [ngStyle]="{'font-weight':'bold', 'font-family': 'Bodoni MT Poster Compressed, cursive'}" mat-dialog-title>Nem
         vagy
         bejelentkezve!</h2>
