holder pop up buying

--- a/src/app/shared/pop-ups/pop-up-no-user/pop-up-no-user.component.html
+++ b/src/app/shared/pop-ups/pop-up-no-user/pop-up-no-user.component.html
@@ -31,7 +31,7 @@
         Tekintsd meg legfrissebb
         <a mat-dialog-close routerLink="/products">Termékeinket</a> vagy
         <a mat-dialog-close routerLink="/login">Kuponjainkat</a>.
-        További jó böngészést!
+        További jó vásárlást!
     </mat-dialog-content>
     <mat-dialog-actions>
         <button mat-raised-button color="primary" mat-dialog-close>Bezárás</button>
