--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -7,6 +7,7 @@
             <mat-card-title>Kapcsolat</mat-card-title>
         </mat-card-header>
         <mat-card-content>
+          <h3>: Hétfőtől péntekig: 7.30-19.00 Szombaton: 7.30-14.00 Telefonszám: Email:</h3>
             <h2><mat-icon>call</mat-icon>+36 222 1111</h2>
             <h2><mat-icon>email</mat-icon> text&#64;gmail.com</h2>
         </mat-card-content>
