--- a/src/app/pages/coupons/coupons.component.html
+++ b/src/app/pages/coupons/coupons.component.html
@@ -1,1 +1,6 @@
-<p>coupons works!</p>
+<input type="number" [(ngModel)]="filterValue" (input)="getCoupons()" placeholder="Discount">
+<ul>
+  <li *ngFor="let coupon of coupons">
+    {{ coupon.name }} - {{ coupon.discount | couponsFormat }} kedvezmény
+  </li>
+</ul>
