--- a/src/app/pages/coupons/coupons.component.html
+++ b/src/app/pages/coupons/coupons.component.html
@@ -1,6 +1,35 @@
-<input type="number" [(ngModel)]="filterValue" (input)="getCoupons()" placeholder="Discount">
-<ul>
-  <li *ngFor="let coupon of coupons">
-    {{ coupon.name }} - {{ coupon.discount | couponsFormat }} kedvezmény
-  </li>
-</ul>
+<div class="main_component div-flex">
+  <mat-card class="div-flex">
+    <mat-card-header>
+      <mat-card-title class="deliveryh3">
+        Kuponok
+        <h4 class="mat-h4">Kuponok kereséséhez írd be a kedvezmény mértékét!</h4>
+      </mat-card-title>
+    </mat-card-header>
+
+    <mat-card-content>
+
+      <div class="container" fxLayout="row" fxLayoutGap="10px">
+
+        <mat-form-field fxFlex="50%">
+          <input inputmode="numeric" matInput type="number" [(ngModel)]="filterValue"
+                 (ngModelChange)="onInputChange($event)"
+                 placeholder="Kedvezmény %" max="100">
+        </mat-form-field>
+        <ul fxFlex="50%" *ngIf="coupons">
+          <li *ngFor="let coupon of coupons" class="coupon-item">
+            <mat-label [routerLink]="['/basket']" [queryParams]="{discount: coupon.discount}">
+              {{ coupon.name }}: {{coupon.id}} <br> - {{ coupon.discount | couponsFormat }} kedvezmény
+            </mat-label>
+          </li>
+
+          <li *ngIf="coupons?.length === 0" class="coupon-item">
+            <mat-label>Nincs ilyen kupon kedvezmény!</mat-label>
+          </li>
+        </ul>
+      </div>
+
+    </mat-card-content>
+  </mat-card>
+</div>
+
