--- a/src/app/pages/basket/basket.component.html
+++ b/src/app/pages/basket/basket.component.html
@@ -1,28 +1,35 @@
 <div class="main_component div-flex">
-  <mat-card class="div-flex">
-    <mat-card-header>
-      <mat-card-title class="deliveryh3">Kosár</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <div class="container">
-        <table>
-          <tr>
-            <th>Mennyiség</th>
-            <th>Termék</th>
-            <th>Ár</th>
-          </tr>
-          <tr *ngFor="let item of basketTransactions">
-            <td>{{ item.itemAmount }} kg</td>
-            <td>{{ item.item.name }}</td>
-            <td>{{ item.itemAmount * item.item.price }} Ft</td>
-          </tr>
-        </table>
-        <p>Végösszeg:  <span *ngIf="discount">{{totalAmount}} Ft</span> <span *ngIf="!discount">{{ totalAmountNoCoupons }} Ft</span></p>
-        <p>Kedvezmény mértéke: <span *ngIf="discount"> {{ discount | couponsFormat }}</span><span
-          *ngIf="!discount">0%</span></p>
-        <button mat-raised-button (click)="removeCoupon()">Kupon eltávolítása</button>
-      </div>
+    <mat-card class="div-flex">
+        <mat-card-header>
+            <mat-card-title class="deliveryh3">Kosár</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="container">
+                <table>
+                    <tr>
+                        <th>Mennyiség</th>
+                        <th>Termék</th>
+                        <th>Ár</th>
+                    </tr>
+                    <tr *ngFor="let item of basketTransactions">
+                        <td>{{ item.itemAmount }} kg</td>
+                        <td>{{ item.item.name }}</td>
+                        <td>{{ item.itemAmount * item.item.price }} Ft</td>
+                    </tr>
+                </table>
+                <p>Végösszeg: <span *ngIf="discount">{{totalAmount}} Ft</span> <span
+                        *ngIf="!discount">{{ totalAmountNoCoupons }} Ft</span></p>
+                <p>Kedvezmény mértéke: <span *ngIf="discount"> {{ discount | couponsFormat }}</span><span
+                        *ngIf="!discount">0%</span></p>
+                <div class="payment-button-container">
+                    <button color="primary" mat-raised-button (click)="openTransactionDialog()">Fizetés</button>
 
-    </mat-card-content>
-  </mat-card>
+                </div>
+                <br><button color="accent" mat-raised-button [routerLink]="['/products']">További termékek hozzáadása</button>
+                <br><button color="accent" mat-raised-button [routerLink]="['/coupons']">Másik kupon hozzáadása</button>
+                <br><button color="accent" mat-raised-button (click)="removeCoupon()">Kupon eltávolítása</button>
+            </div>
+
+        </mat-card-content>
+    </mat-card>
 </div>
