--- a/src/app/pages/coupons/coupons.component.html
+++ b/src/app/pages/coupons/coupons.component.html
@@ -17,7 +17,7 @@
                  placeholder="Kedvezmény %" max="100">
         </mat-form-field>
         <ul fxFlex="50%" *ngIf="coupons">
-          <li *ngFor="let coupon of coupons" class="coupon-item">
+          <li [routerLink]="['/basket']" *ngFor="let coupon of coupons" class="coupon-item">
             <mat-label [routerLink]="['/basket']" [queryParams]="{discount: coupon.discount}">
               {{ coupon.name }}: {{coupon.id}} <br> - {{ coupon.discount | couponsFormat }} kedvezmény
             </mat-label>
