--- a/src/app/shared/pop-ups/pop-up-transaction/pop-up-transaction.component.html
+++ b/src/app/shared/pop-ups/pop-up-transaction/pop-up-transaction.component.html
@@ -26,7 +26,7 @@
     </mat-dialog-content>
     <mat-dialog-actions>
         <button mat-raised-button mat-dialog-close color="primary">Mégsem</button>
-        <button mat-raised-button type="submit" color="primary">Fizetés</button>
+        <button mat-raised-button type="submit" color="primary" (click)="pay()">Fizetés</button>
     </mat-dialog-actions>
     </form>
 </div>
