--- a/src/app/pages/delivery/delivery.component.html
+++ b/src/app/pages/delivery/delivery.component.html
@@ -1,116 +1,118 @@
 <div class="main_component">
-  <h1 [ngStyle]="{'padding-top':'10%'}">Kiszállítási információk</h1>
-  <h3 [ngStyle]="{'text-align':'center'}">A megrendelt áru átvételére a következő lehetőségek közül választhatsz
-    áruházunkban:</h3>
+    <h1 [ngStyle]="{'padding-top':'10%'}">Kiszállítási információk</h1>
+    <h3 [ngStyle]="{'text-align':'center'}">A megrendelt áru átvételére a következő lehetőségek közül választhatsz
+        áruházunkban:</h3>
 
-  <h3 class="deliveryh3"> HÁZHOZ SZÁLLÍTÁS</h3>
-  <p>
-    Szeged területén túl is szívesen kiszállítjuk a rendeléseket. Mindenhova eljuttatjuk az árut, hogy Önnek ne kelljen
-    különösebben foglalkoznia a beszerzéssel.
+    <h3 class="deliveryh3"> HÁZHOZ SZÁLLÍTÁS</h3>
+    <p>
+        Szeged területén túl is szívesen kiszállítjuk a rendeléseket. Mindenhova eljuttatjuk az árut, hogy Önnek ne
+        kelljen
+        különösebben foglalkoznia a beszerzéssel.
 
-  </p>
+    </p>
 
-  <h3>Szállítási díjak:</h3>
-
-
-  <table>
-    <thead>
-    <tr>
-
-      <th></th>
-      <th>Szeged és környéke</th>
-      <th>Észak-Magyarország</th>
-      <th>Észak-Alföld</th>
-      <th>Dél-Alföld</th>
-      <th>Pest</th>
-      <th>Budapest</th>
-      <th>Közép-Dunántúl</th>
-      <th>Nyugat-Dunántúl</th>
-      <th>Dél-Dunántúl</th>
-    </tr>
-    <tr>
-      <td>Minimum rendelési összeg</td>
-      <td>5.000</td>
-      <td>15.000 Ft</td>
-      <td>12.500 Ft</td>
-      <td>5.000 Ft</td>
-      <td>15.000 Ft</td>
-      <td>15.000 Ft</td>
-      <td>15.000 Ft</td>
-      <td>17.500 Ft</td>
-      <td>10.000 Ft</td>
-    </tr>
-    <tr>
-      <td>Szállítási díj</td>
-      <td>Ingyenes</td>
-      <td>2.490 Ft</td>
-      <td>2.490 Ft</td>
-      <td>1.490 Ft</td>
-      <td>2.490 Ft</td>
-      <td>2.490 Ft</td>
-      <td>2.490 Ft</td>
-      <td>2.990 Ft</td>
-      <td>2.490 Ft</td>
-    </tr>
-    <!--    <tr>-->
-    <!--      <td>Ingyenes házhoz szállítás</td>-->
-    <!--    </tr>-->
-    </thead>
-    <tbody>
-    <!-- Ide írd be a táblázat tartalmát -->
-    <!-- Példa: -->
-    <!--
-    <tr>
-      <td>Budapest</td>
-      <td>$20</td>
-      <td>$5</td>
-      <td>$50 felett</td>
-    </tr>
-    <tr>
-      <td>Pest megye</td>
-      <td>$30</td>
-      <td>$8</td>
-      <td>$70 felett</td>
-    </tr>
-    -->
-    </tbody>
-  </table>
-  <br>
-  <h3 class="deliveryh3">BOLTI ÁTVÉTEL</h3>
-  <p> A személyes átvételre a bolt nyitva tartási
-    idejében van lehetőség HÉTFŐTŐL PÉNTEKIG.
-
-    <a routerLink="/contact">Nyitvatartás, telefonszám és email</a>
+    <h3>Szállítási díjak:</h3>
 
 
-  </p>
-  <h3 class="deliveryh3">
-    EGYÉB INFORMÁCIÓK
-  </h3>
-  <p>A kisebb megrendeléstől az egész teherautós igényekig mindent tudunk teljesíteni.</p>
+    <table>
+        <thead>
+        <tr>
 
-  <p> Ha nagyobb mennyiséget szeretnél rendelni (éttermek, közületek részére), kérjük, lépj kapcsolatba
-    ügyfélszolgálatunkkal!
+            <th></th>
+            <th>Szeged és környéke</th>
+            <th>Észak-Magyarország</th>
+            <th>Észak-Alföld</th>
+            <th>Dél-Alföld</th>
+            <th>Pest</th>
+            <th>Budapest</th>
+            <th>Közép-Dunántúl</th>
+            <th>Nyugat-Dunántúl</th>
+            <th>Dél-Dunántúl</th>
+        </tr>
+        <tr>
+            <td>Minimum rendelési összeg</td>
+            <td>5.000</td>
+            <td>15.000 Ft</td>
+            <td>12.500 Ft</td>
+            <td>5.000 Ft</td>
+            <td>15.000 Ft</td>
+            <td>15.000 Ft</td>
+            <td>15.000 Ft</td>
+            <td>17.500 Ft</td>
+            <td>10.000 Ft</td>
+        </tr>
+        <tr>
+            <td>Szállítási díj</td>
+            <td>Ingyenes</td>
+            <td>2.490 Ft</td>
+            <td>2.490 Ft</td>
+            <td>1.490 Ft</td>
+            <td>2.490 Ft</td>
+            <td>2.490 Ft</td>
+            <td>2.490 Ft</td>
+            <td>2.990 Ft</td>
+            <td>2.490 Ft</td>
+        </tr>
+        <!--    <tr>-->
+        <!--      <td>Ingyenes házhoz szállítás</td>-->
+        <!--    </tr>-->
+        </thead>
+        <tbody>
+        <!-- Ide írd be a táblázat tartalmát -->
+        <!-- Példa: -->
+        <!--
+        <tr>
+          <td>Budapest</td>
+          <td>$20</td>
+          <td>$5</td>
+          <td>$50 felett</td>
+        </tr>
+        <tr>
+          <td>Pest megye</td>
+          <td>$30</td>
+          <td>$8</td>
+          <td>$70 felett</td>
+        </tr>
+        -->
+        </tbody>
+    </table>
+    <br>
+    <h3 class="deliveryh3">BOLTI ÁTVÉTEL</h3>
+    <p> A személyes átvételre a bolt nyitva tartási
+        idejében van lehetőség HÉTFŐTŐL PÉNTEKIG.
 
-  <p> Amennyiben meghatározott, fontos eseményre szeretnél vásárolni, javasoljuk, hogy korábban add le megrendelésedet,
-    és
-    a megjegyzés rovatban tüntesd fel, hogy mikorra szeretnéd a teljesítést.</p>
+        <a routerLink="/contact">Nyitvatartás, telefonszám és email</a>
 
-  <p> A megrendelt és a kiszállított mennyiség között néhány dekagrammos eltérés mutatkozhat a termék fizikai
-    adottságából fakadóan.</p>
 
-  <br>
-  <h3 [ngStyle]="{  'font-weight': 'bold',
+    </p>
+    <h3 class="deliveryh3">
+        EGYÉB INFORMÁCIÓK
+    </h3>
+    <p>A kisebb megrendeléstől az egész teherautós igényekig mindent tudunk teljesíteni.</p>
+
+    <p> Ha nagyobb mennyiséget szeretnél rendelni (éttermek, közületek részére), kérjük, lépj kapcsolatba
+        ügyfélszolgálatunkkal!
+
+    <p> Amennyiben meghatározott, fontos eseményre szeretnél vásárolni, javasoljuk, hogy korábban add le
+        megrendelésedet,
+        és
+        a megjegyzés rovatban tüntesd fel, hogy mikorra szeretnéd a teljesítést.</p>
+
+    <p> A megrendelt és a kiszállított mennyiség között néhány dekagrammos eltérés mutatkozhat a termék fizikai
+        adottságából fakadóan.</p>
+
+    <br>
+    <h3 [ngStyle]="{  'font-weight': 'bold',
   'font-style': 'italic', 'text-align':'center'}">Friss kosár - Prémium áru szívvel-lélekkel
-    <mat-icon>favorite</mat-icon>
-  </h3>
-  <h2><a routerLink="/products">Tekintsd meg legfrissebb termékeinket!</a></h2>
+        <mat-icon>favorite</mat-icon>
+    </h3>
+    <h2><a routerLink="/products">Tekintsd meg legfrissebb termékeinket!</a></h2>
 </div>
 
 <div [ngStyle]="{'visibility':'hidden'}">
-  <h2>
-    <strong>Ha esetleg ezt az errort látnád a konzolban, akkor kapcsolj ki minden böngészős bővítmény.</strong><br>
-    Unchecked runtime.lastError: A listener indicated an asynchronous response by returning true, but the message
-    channel closed before a response was received
-  </h2>
+    <h2>
+        <strong>Ha esetleg ezt az errort látnád a konzolban, akkor kapcsolj ki minden böngészős bővítmény.</strong><br>
+        Unchecked runtime.lastError: A listener indicated an asynchronous response by returning true, but the message
+        channel closed before a response was received
+    </h2>
 </div>
