--- a/src/app/pages/coupons/coupons.component.html
+++ b/src/app/pages/coupons/coupons.component.html
@@ -17,10 +17,12 @@
                  placeholder="Kedvezmény %" max="100">
         </mat-form-field>
         <ul fxFlex="50%" *ngIf="coupons">
-          <li [routerLink]="['/basket']" *ngFor="let coupon of coupons" class="coupon-item">
-            <mat-label [routerLink]="['/basket']" [queryParams]="{discount: coupon.discount}">
-              {{ coupon.name }}: {{coupon.id}} <br> - {{ coupon.discount | couponsFormat }} kedvezmény
-            </mat-label>
+          <li *ngFor="let coupon of coupons" class="coupon-item">
+            <a (click)="goToBasket(coupon.discount)">
+              <mat-label>
+                {{ coupon.name }}: {{coupon.id}} <br> - {{ coupon.discount | couponsFormat }} kedvezmény
+              </mat-label>
+            </a>
           </li>
 
           <li *ngIf="coupons?.length === 0" class="coupon-item">
@@ -32,4 +34,3 @@
     </mat-card-content>
   </mat-card>
 </div>
-
