--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,53 +1,53 @@
 <div class="main_component">
-  <div class="card">
-    <div class="card-body">
-      <h1>Felhasználói profil</h1>
-      <div *ngIf="loggedInUser">
-        <h3>Üdv, {{ loggedInUser.name.firstname }}!</h3>
-      </div>
-<!--      <h2 >Jelenlegi név: {{ loggedInUser?.name.lastname}} {{ loggedInUser?.name.firstname}}</h2>-->
-      <h2>Jelenlegi név: {{ loggedInUser | nameFormat }}</h2>
-      <h2>Jelenlegi email: {{ loggedInUser?.email }}</h2>
-      <h2>FrissPontjaid száma: {{ loggedInUser?.points }}</h2>
-
-      <form [formGroup]="userDataChangeGroup">
-        <mat-form-field class="form-field">
-          <mat-label for="emailChange">Email cím változtatása</mat-label>
-          <input matInput type="text" formControlName="emailChange">
-        </mat-form-field>
-        <div class="sub-form">
-          <mat-form-field class="sub-form-field">
-            <mat-label for="passwordChange">Jelszó változtatása</mat-label>
-            <input matInput formControlName="passwordChange" type="password" />
-          </mat-form-field>
-          <mat-form-field class="sub-form-field">
-            <mat-label for="passwordAgainChange">Jelszó újra:</mat-label>
-            <input matInput formControlName="passwordAgainChange" type="password" />
-          </mat-form-field>
+    <div class="card">
+        <div class="card-body">
+            <h1>Felhasználói profil</h1>
+            <div *ngIf="loggedInUser">
+                <h3>Üdv, {{ loggedInUser.name.firstname }}!</h3>
+            </div>
+            <h2>Jelenlegi név: {{ loggedInUser | nameFormat }}</h2>
+            <h2>Jelenlegi email: {{ loggedInUser?.email }}</h2>
+            <h2>FrissPontjaid száma: {{ loggedInUser?.points }}</h2>
+            <form [formGroup]="userDataChangeGroup">
+                <mat-form-field class="form-field">
+                    <mat-label>Email cím változtatása</mat-label>
+                    <input matInput type="text" formControlName="emailChange">
+                </mat-form-field>
+                <div class="sub-form">
+                    <mat-form-field class="sub-form-field">
+                        <mat-label>Jelszó változtatása</mat-label>
+                        <input matInput formControlName="passwordChange" type="password"/>
+                    </mat-form-field>
+                    <mat-form-field class="sub-form-field">
+                        <mat-label>Jelszó újra:</mat-label>
+                        <input matInput formControlName="passwordAgainChange" type="password"/>
+                    </mat-form-field>
+                </div>
+                <button mat-raised-button [ngStyle]="{'margin-right':'1vh'}" color="primary" (click)="changeUserData()">
+                    Profil frissítése
+                </button>
+                <button mat-raised-button color="warn" (click)="deleteProfile()">Profil törlése</button>
+                <table *ngIf="userTransactions" class="transaction-table">
+                    <thead>
+                    <tr>
+                        <th>Tranzakció azonosítő</th>
+                        <th>Dátum</th>
+                        <th>Ár</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let transaction of userTransactions">
+                        <td>{{ transaction.id }}</td>
+                        <td>{{ transaction.date | firebaseDateFormat }}</td>
+                        <td>{{ transaction.totalPrice }} Ft</td>
+                    </tr>
+                    </tbody>
+                </table>
+                <div *ngIf="userTransactions?.length === 0">
+                    <p>Még nem vásároltál semmit.</p>
+                    <a routerLink="/products">Termékeink</a>
+                </div>
+            </form>
         </div>
-        <button mat-raised-button [ngStyle]="{'margin-right':'1vh'}" color="primary" (click)="changeUserData()">Profil frissítése</button>
-        <button mat-raised-button color="warn" (click)="deleteProfile()">Profil törlése</button>
-        <table *ngIf="userTransactions" class="transaction-table">
-          <thead>
-          <tr>
-            <th>Tranzakció azonosítő</th>
-            <th>Dátum</th>
-            <th>Ár</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr *ngFor="let transaction of userTransactions">
-            <td>{{ transaction.id }}</td>
-            <td>{{ formatDate(transaction.date) }}</td>
-            <td>{{ transaction.totalPrice }} Ft</td>
-          </tr>
-          </tbody>
-        </table>
-        <div *ngIf="userTransactions?.length === 0">
-          <p>Még nem vásároltál semmit.</p>
-          <a routerLink="/products">Termékeink</a>
-        </div>
-      </form>
     </div>
-  </div>
 </div>
