--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,41 +1,41 @@
 <div class="main_component">
 
-  <div class="card">
-    <div class="card-body">
-  <div class="div-flex">
-    <h1 class="favicon-container">Regisztráció <img src="assets/tomato_vegetable.ico" class="favicon" alt=""></h1>
-    <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
-      <mat-form-field>
-        <mat-label for="email">Email cím: </mat-label>
-        <input matInput type="text" formControlName="email"/>
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label for="password">Jelszó: </mat-label>
-        <input matInput type="password" formControlName="password"/>
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label for="rePassword">Jelszó újra: </mat-label>
-        <input matInput type="password" formControlName="rePassword"/>
-      </mat-form-field>
-      <div class="sub-form" formGroupName="name">
-        <mat-form-field>
-          <mat-label for="firstname">Vezetéknév: </mat-label>
-          <input matInput type="text" formControlName="lastname"/>
-        </mat-form-field>
-        <mat-form-field>
-          <mat-label for="firstname">Keresztnév: </mat-label>
-          <input matInput type="text" formControlName="firstname"/>
-        </mat-form-field>
-      </div>
-      <div>
-        <span class="buttons"> <button color="primary" mat-raised-button type="submit">Regisztráció</button></span>
-        <br>
-<!--        <span><a href="" color="primary" (click)="goBack()">Már van fiókom</a></span>-->
-        <span><a href="" color="primary" [routerLink]="'/login'">Már van fiókom</a></span>
-        <!--        <span class="buttons"> <button color="primary" mat-raised-button (click)="goBack()">Back</button></span>-->
-      </div>
-    </form>
-  </div>
-</div>
-</div>
+    <div class="card">
+        <div class="card-body">
+            <div class="div-flex">
+                <h1 class="favicon-container">Regisztráció <img src="assets/tomato_vegetable.ico" class="favicon"
+                                                                alt=""></h1>
+                <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
+                    <mat-form-field>
+                        <mat-label for="email">Email cím:</mat-label>
+                        <input matInput type="text" formControlName="email"/>
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-label for="password">Jelszó:</mat-label>
+                        <input matInput type="password" formControlName="password"/>
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-label for="rePassword">Jelszó újra:</mat-label>
+                        <input matInput type="password" formControlName="rePassword"/>
+                    </mat-form-field>
+                    <div class="sub-form" formGroupName="name">
+                        <mat-form-field>
+                            <mat-label for="firstname">Vezetéknév:</mat-label>
+                            <input matInput type="text" formControlName="lastname"/>
+                        </mat-form-field>
+                        <mat-form-field>
+                            <mat-label for="firstname">Keresztnév:</mat-label>
+                            <input matInput type="text" formControlName="firstname"/>
+                        </mat-form-field>
+                    </div>
+                    <div>
+                        <span class="buttons"> <button color="primary" mat-raised-button
+                                                       type="submit">Regisztráció</button></span>
+                        <br>
+                        <span><a href="" color="primary" [routerLink]="'/login'">Már van fiókom</a></span>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
