--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,42 +1,38 @@
 <mat-nav-list>
-  <a mat-list-item routerLink="/main" (click)="close()">
-    <mat-icon>menu</mat-icon>
-    <span>Main</span>
-</a>
-  <a mat-list-item routerLink="/login" (click)="close()" *ngIf="!(loggenInUser)">
-    <mat-icon>menu</mat-icon>
-    <span>Login</span>
-  </a>
-  <a mat-list-item routerLink="/login" (click)="close(true)" *ngIf="(loggenInUser)">
-    <mat-icon>logout</mat-icon>
-    <span>Logout</span>
-  </a>
-  <a mat-list-item routerLink="/signup" (click)="close()">
-    <mat-icon>menu</mat-icon>
-    <span>Signup</span>
-  </a>
-  <a mat-list-item routerLink="/products" (click)="close()">
-    <mat-icon>menu</mat-icon>
-    <span>Products</span>
-  </a>
-  <a mat-list-item routerLink="/delivery" (click)="close()">
-    <mat-icon>menu</mat-icon>
-    <span>Delivery</span>
-  </a>
-  <a mat-list-item routerLink="/contact" (click)="close()">
-    <mat-icon>menu</mat-icon>
-    <span>Contact</span>
-  </a>
-  <a mat-list-item routerLink="/basket" (click)="close()">
-    <mat-icon>menu</mat-icon>
-    <span>Basket</span>
-  </a>
-  <a mat-list-item routerLink="/profile">
-    <mat-icon>menu</mat-icon>
-    <span>Profile</span>
-  </a>
-
+    <a mat-list-item routerLink="/main" (click)="close()">
+        <mat-icon>home</mat-icon>
+        <span>Main</span>
+    </a>
+    <a mat-list-item routerLink="/products" (click)="close()">
+        <mat-icon>shopping_cart</mat-icon>
+        <span>Termékek</span>
+    </a>
+    <a mat-list-item routerLink="/delivery" (click)="close()">
+        <mat-icon>local_shipping</mat-icon>
+        <span>Szállítás</span>
+    </a>
+    <a mat-list-item routerLink="/contact" (click)="close()">
+        <mat-icon>alternate_email</mat-icon>
+        <span>Rólunk</span>
+    </a>
+    <a mat-list-item routerLink="/coupons" (click)="close(); openDialog(' Kuponok')">
+        <mat-icon>settings</mat-icon>
+        <span>Kuponok</span>
+    </a>
+    <a mat-list-item routerLink="/basket" (click)="close(); openDialog('Kosár')">
+        <mat-icon>shopping_basket</mat-icon>
+        <span>Kosár</span>
+    </a>
+    <a mat-list-item routerLink="/login" (click)="close()" *ngIf="!(loggedInUser)">
+        <mat-icon>login</mat-icon>
+        <span>Login</span>
+    </a>
+    <a mat-list-item routerLink="/profile" (click)="close()" *ngIf="(loggedInUser)">
+        <mat-icon>account_circle</mat-icon>
+        <span>Profile</span>
+    </a>
+    <a mat-list-item routerLink="/login" (click)="close(true)" *ngIf="(loggedInUser)">
+        <mat-icon>logout</mat-icon>
+        <span>Logout</span>
+    </a>
 </mat-nav-list>
-<!--<select [(ngModel)]="currentPage" (change)="menuSwitch()">-->
-
-<!--</select>-->
