nem hiszem el... stackoverflow miatt sikeres kitelepites

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,20 +1,19 @@
 <div class="main_component">
     <div class="card">
         <div class="card-body">
-            <p>nagypista&#64;gmail.com</p>
             <h1 class="favicon-container">Bejelentkezés <img src="assets/strawberry_fruit.ico" class="favicon" alt="">
             </h1>
             <mat-form-field>
-                <mat-label for="email">Email cím:</mat-label>
+                <mat-label>Email cím:</mat-label>
                 <input matInput type="text" [formControl]="email"/>
             </mat-form-field>
             <mat-form-field>
-                <mat-label for="password">Jelszó:</mat-label>
+                <mat-label>Jelszó:</mat-label>
                 <input matInput type="password" [formControl]="password"/>
             </mat-form-field>
             <button class="login-button" mat-raised-button color="primary" (click)="login()">Bejelentkezés</button>
             <br>
-            <span><a href="" color="primary" [routerLink]="'/signup'">Még nincs fiókom</a></span>
+            <span><a [routerLink]="'/signup'">Még nincs fiókom</a></span>
             <div *ngIf="loading" class="loading-indicator">
                 <mat-spinner></mat-spinner>
             </div>
