--- a/src/app/pages/basket/basket.component.scss
+++ b/src/app/pages/basket/basket.component.scss
@@ -65,13 +65,13 @@ mat-icon {
 
 
 h1 {
-  font-family: "Signika Negative Light", cursive;
+  font-family: "Signika Negative Light", monospace;
   font-weight: bold;
   font-size: 5vh;
 }
 
 h3 {
-  font-family: "Signika Negative Light", cursive;
+  font-family: "Signika Negative Light", monospace;
   font-size: 2vh;
   text-align: left;
   font-weight: bold;
