--- a/src/app/pages/delivery/delivery.component.scss
+++ b/src/app/pages/delivery/delivery.component.scss
@@ -8,13 +8,13 @@ div {
 }
 
 h1 {
-  font-family: "Signika Negative Light", cursive;
+  font-family: "Signika Negative Light", monospace;
   font-weight: bold;
   font-size: 5vh;
 }
 
 h3 {
-  font-family: "Signika Negative Light", cursive;
+  font-family: "Signika Negative Light", monospace;
   font-size: 2vh;
   text-align: left;
   font-weight: bold;
