--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -8,7 +8,7 @@ div {
 }
 
 .main_component * {
-  font-family: "Signika Negative Light", cursive;
+  font-family: "Signika Negative Light", monospace;
   font-weight: bold;
 }
 
