--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,7 @@ html, body {
 
 body {
   margin: 0;
-  font-family: "Signika Negative Light", sans-serif;
+  font-family: "Signika Negative Light", monospace;
   overflow-y: scroll;
 }
 
