--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -8,12 +8,12 @@ div {
 }
 
 h1 {
-  font-family: "Signika Negative Light", cursive;
+  font-family: "Signika Negative Light", monospace;
   font-weight: bold;
 }
 
 h3 {
-  font-family: "Signika Negative Light", cursive;
+  font-family: "Signika Negative Light", monospace;
   font-size: 2vh;
 }
 
