--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -46,7 +46,7 @@ th {
 }
 
 .main_component * {
-  font-family: "Signika Negative Light", cursive;
+  font-family: "Signika Negative Light", monospace;
   font-weight: bold;
 }
 
